--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "vuepress build . --no-cache",
+    "build": "vuepress build .",
     "dev": "vuepress dev ."
   },
   "devDependencies": {
